# spike

./: CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt
src/liba/: CMakeLists.txt  liba.cpp  liba.h
src/main/: CMakeLists.txt  main.cpp
